# tiralabra

./: .coveragerc  .gitignore  README.md  Viikkoraportti 1.md  pyproject.toml  tasks.py
dokumentointi/: maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentointi/viikkoraportit/: viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: index.py  suorituskyky.py
src/algoritmit/: A.py  JPS.py  naapurit.py
src/kayttoliittyma/: mitat.py  ohjeet.py  ruudukko.py
src/ruudukko/: reitti.py  resetointi.py  ruudukko.py
src/tests/: a_algoritmi_test.py  algoritmit_test.py  generointi_test.py  jps_algoritmi_test.py  reitti_test.py  resetointi_test.py
