[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Antti Vainikka <antti.vainikka36@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.6.0"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pylint = "^2.9.5"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
